--- a/pages/person/improve/improve.wxml
+++ b/pages/person/improve/improve.wxml
@@ -1,7 +1,7 @@
 <!--pages/person/improve/improve.wxml-->
 <view wx:if="{{id == 1}}">
   <view class='banner'>
-    <image src="/images/banner-vip.jpg"></image>
+    <image src="{{single}}"></image>
   </view>
   <view class='btn' bindtap='pay' id="29800"><text class='text'>立即购买</text></view>
 </view>
@@ -35,7 +35,7 @@
   </view> -->
   <view class='page'>
    <view class='head'>
-    <image src="/images/banner.jpg"></image>
+    <image src="{{banner}}"></image>
    </view>
     <view class="page__bd">
       <view class="weui-cells weui-cells_after-title">
