--- a/pages/article/article.wxml
+++ b/pages/article/article.wxml
@@ -1,4 +1,4 @@
-<!--pages/article/article.wxml-->
+<!--pages/article/article.wxml    铭邦高考规划平台会员服务协议-->
 <view class="page">
     <view class="page__bd">
         <view class="weui-article">
