--- a/pages/intelligence/intelligence.wxml
+++ b/pages/intelligence/intelligence.wxml
@@ -1,4 +1,5 @@
 <!--pages/intelligence/intelligence.wxml-->
+<!-- 智能推荐首页 -->
 <view class="content1">
   <view class="content1-left">
     <text style="color:rgb(125,216,202);font-size:30rpx;">我的分数：{{examinee.EXAMSCORE? examinee.EXAMSCORE : 0}}分</text>
