--- a/pages/teacher/answer/answer.wxml
+++ b/pages/teacher/answer/answer.wxml
@@ -1,4 +1,5 @@
 <!--pages/teacher/answer/answer.wxml-->
+<!-- 专家回复页面 -->
 <view class="page">
   <view class='page_bd'>
     <view class="weui-cells__title">回复</view>
