--- a/pages/character/test/test.wxml
+++ b/pages/character/test/test.wxml
@@ -1,4 +1,4 @@
-<!--pages/character/test/test.wxml-->
+<!--pages/character/test/test.wxml   性格测试问题页（还没开始写，如果写的话可以把这个删了重新写）-->
 <progress percent="80" show-info active />
 <view class='content'>
   <view class='title'>
