--- a/pages/consult/consultlist/rule/rule.wxml
+++ b/pages/consult/consultlist/rule/rule.wxml
@@ -1,4 +1,5 @@
 <!--pages/school/schoolcontent/rule/rule.wxml-->
+<!-- 招生简章内容页 -->
 <import src="../../../../wxParse/wxParse.wxml" />
 <view class='content' wx:for="{{content}}" wx:key = "{{item.TITLE}}">
   <view class="head">
