--- a/pages/contacts/contacts.wxml
+++ b/pages/contacts/contacts.wxml
@@ -1,4 +1,5 @@
 <!--pages/contacts/contacts.wxml-->
+<!-- 联系人列表页 -->
 <view class="weui-search-bar">
   <view class="weui-search-bar__form">
     <view class="weui-search-bar__box">
