--- a/pages/imitate/school/content/content.wxml
+++ b/pages/imitate/school/content/content.wxml
@@ -1,4 +1,5 @@
 <!--pages/imitate/school/content/content.wxml-->
+<!-- 模拟填报选择学校页面 -->
 <view class='page'>
 <view class="weui-search-bar">
         <view class="weui-search-bar__form">
