--- a/pages/imitate/school/major/major.wxml
+++ b/pages/imitate/school/major/major.wxml
@@ -1,4 +1,5 @@
 <!--pages/imitate/school/major/major.wxml-->
+<!-- 模拟填报选择专业页面 -->
 <view class="page">
     <view class="page__bd">
       <block wx:for="{{major}}" wx:key="">
