--- a/pages/imitate/school/school.wxml
+++ b/pages/imitate/school/school.wxml
@@ -1,4 +1,5 @@
  <!--pages/imitate/school/school.wxml-->
+ <!-- 模拟填报选择学校专业 -->
 <view class='page'>
   <view class='page_bd'>
     <view class="weui-cells weui-cells_after-title">
