--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -55,7 +55,6 @@
   border-bottom: 20rpx solid #F7F7F7;
   display: flex;
   flex-direction:row;
-  align-items:center;
   justify-content: flex-start;
   position: relative;
   background-color:white;
@@ -138,4 +137,25 @@
 .footer{
   width: 100%;
   height:80rpx;
+}
+.weui-flex__item{
+  height:228rpx;
+}
+.placeholder{
+  padding:0 50rpx;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #fe8402;
+}
+.adv_left{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  color:white;
+  /* align-items: center; */
+}
+.page__bd_spacing{
+  margin-bottom:20rpx;
 }
