--- a/pages/intelligence/major/major.wxml
+++ b/pages/intelligence/major/major.wxml
@@ -1,4 +1,5 @@
 <!--pages/intelligence/major/major.wxml-->
+<!-- 智能推荐选择专业页面 -->
 <view class="page">  
     <view class="page__bd">
           <view class="weui-search-bar">
