--- a/pages/intelligence/mold/mold.wxml
+++ b/pages/intelligence/mold/mold.wxml
@@ -1,4 +1,5 @@
 <!--pages/intelligence/mold/mold.wxml-->
+<!-- 智能推荐选择院校类型页面 -->
 <view class="page">
     <view class="page__bd">
 		<view class="weui-cells weui-cells_after-title">
