--- a/pages/major/majorcontent/content/content.wxml
+++ b/pages/major/majorcontent/content/content.wxml
@@ -1,4 +1,5 @@
 <!--pages/major/majorcontent/content/content.wxml-->
+<!-- 专业库详情页 -->
 <import src="/wxParse/wxParse.wxml" />
 <view class='page'>
   <view class='content'>
