--- a/pages/person/goods/goods.wxml
+++ b/pages/person/goods/goods.wxml
@@ -1,4 +1,5 @@
 <!--pages/person/goods/goods.wxml-->
+<!-- 我的物品页面 -->
 <view class='page'>
   <view class='content lines'> 
     <image src="/images/tb12.png" ></image>
