--- a/pages/person/security/email/email.wxml
+++ b/pages/person/security/email/email.wxml
@@ -1,4 +1,5 @@
 <!--pages/person/security/email/email.wxml-->
+<!-- 修改邮箱页面 -->
 <view class='page'>
 <form bindsubmit="formSubmit">
 <view class="page__bd">
