--- a/pages/person/security/security.wxml
+++ b/pages/person/security/security.wxml
@@ -1,4 +1,5 @@
 <!--pages/person/security/security.wxml-->
+<!-- 账户安全页面 -->
 <view class="page">
   <view class='content'>
     <view class="image"><image src="../../../images/tb07.png"></image></view>
