--- a/pages/person/tbasics/tbasics.wxml
+++ b/pages/person/tbasics/tbasics.wxml
@@ -1,3 +1,4 @@
+<!-- 修改老师个人信息页面 -->
 <view class="page">
 <form bindsubmit="formSubmit">
   <view class="weui-cell weui-cell_access" hover-class="weui-cell_active">
