--- a/pages/school/school.wxml
+++ b/pages/school/school.wxml
@@ -1,4 +1,5 @@
 <!--pages/school/school.wxml-->
+<!-- 院校库页面 -->
 <view class="page__bd">
     <view class="weui-search-bar">
         <view class="weui-search-bar__form">
