--- a/pages/school/schoolcontent/plan/plan.wxml
+++ b/pages/school/schoolcontent/plan/plan.wxml
@@ -1,4 +1,5 @@
 <!--pages/school/schoolcontent/plan/plan.wxml-->
+<!-- 招生计划页面（目前没用） -->
 <import src="../../../../wxParse/wxParse.wxml" />
 <view class='content' wx:for="{{content}}" wx:key = "{{item.TITLE}}">
   <view class="head">
