--- a/pages/teacher/ask/ask.wxml
+++ b/pages/teacher/ask/ask.wxml
@@ -1,4 +1,5 @@
 <!--pages/teacher/ask/ask.wxml-->
+<!-- 考生提问页面 -->
 <view class="page">
   <view class='page_bd'>
     <view class="weui-cells__title">问题<text style="color:red">*</text></view>
