--- a/pages/teacher/content/content.wxml
+++ b/pages/teacher/content/content.wxml
@@ -1,4 +1,5 @@
 <!--pages/teacher/content/content.wxml-->
+<!-- 预约页面 -->
 <view class='page'>
    <view class='head'>
     <image src="/images/banner.jpg"></image>
