--- a/pages/teacher/introduce/introduce.wxml
+++ b/pages/teacher/introduce/introduce.wxml
@@ -1,4 +1,5 @@
 <!--pages/teacher/introduce/introduce.wxml-->
+<!-- 专家详情页 -->
 <view class='page' wx:for="{{expert}}" wx:key="">
   <view class='page_bd'>
     <view class="weui-panel weui-panel_access">
