--- a/pages/teacher/issue_content/issue_content.wxml
+++ b/pages/teacher/issue_content/issue_content.wxml
@@ -1,4 +1,5 @@
 <!--pages/teacher/issue_content/issue_content.wxml-->
+<!-- 问题详情页 -->
 <view class="page">
   <view class='page_bd'>
     <view class="weui-panel">
