--- a/pages/consult/consult.wxml
+++ b/pages/consult/consult.wxml
@@ -1,4 +1,7 @@
 <!-- 院校咨询列表页 -->
+<view style='width:100%;height: 300rpx;'>
+  <image src='{{consultation}}' style="width: 100%;height: 100%;"></image>
+</view>
 <view class="page__bd">
     <view class="weui-search-bar">
         <view class="weui-search-bar__form">
