--- a/pages/major/major.wxml
+++ b/pages/major/major.wxml
@@ -1,5 +1,8 @@
 <!--pages/major/major.wxml-->
 <!-- 专业库首页 -->
+<view style='width:100%;height: 300rpx;'>
+  <image src='{{consultation}}' style="width: 100%;height: 100%;"></image>
+</view>
 <view class="page">
   <view class="page__bd">
     <view class="weui-tab">
