--- a/pages/school/school.wxml
+++ b/pages/school/school.wxml
@@ -1,5 +1,8 @@
 <!--pages/school/school.wxml-->
 <!-- 院校库页面 -->
+<view style='width:100%;height: 300rpx;'>
+  <image src='{{consultation}}' style="width: 100%;height: 100%;"></image>
+</view>
 <view class="page__bd">
     <view class="weui-search-bar">
         <view class="weui-search-bar__form">
