--- a/pages/teacher/teacher.wxml
+++ b/pages/teacher/teacher.wxml
@@ -1,5 +1,8 @@
 <!--pages/teacher/teacher.wxml-->
 <!-- 专家问答页面 -->
+<view style='width:100%;height: 300rpx;'>
+  <image src='{{consultation}}' style="width: 100%;height: 100%;"></image>
+</view>
 <view class="page">
     <view class="page__bd">
       <view class="weui-tab">
