--- a/pages/video/video.wxss
+++ b/pages/video/video.wxss
@@ -9,7 +9,16 @@
 }
 .section-item{
   width:49%;
-  margin-top:20rpx;
+  margin-bottom:35rpx;
+  overflow: hidden;
+}
+.title{
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  height:90rpx;
 }
 .images{
   width:100%;
