--- a/pages/chatroom/chatroom.wxml
+++ b/pages/chatroom/chatroom.wxml
@@ -18,7 +18,7 @@
         <view class="user">
           <text>{{ name }}</text>
         </view> 
-        <image class="avatar" src="{{item.SHEADURL}}"/>
+        <image class="avatar" src="{{item.headurl}}"/>
         <view class="msg">
             <view class="template" wx:for="{{ item.CONTENT }}" wx:key="">
               <template is="{{ item.type }}" data="{{ item }}"/>
