修改聊天内容的头像

--- a/pages/chatroom/chatroom.wxml
+++ b/pages/chatroom/chatroom.wxml
@@ -40,7 +40,7 @@
         <view wx:if="{{role == 1}}">
         <form bindreset="cleanInput">
             <view class="emoji-row">
-              <textarea type="text" value="{{ inputMessage }}" bindinput="bindMessage" fixed='true' auto-height='true' show-confirm-bar='{{hid}}'cursor-spacing="15" class='news'></textarea>
+              <textarea type="text" value="{{ inputMessage }}" bindinput="bindMessage" auto-height='true' show-confirm-bar='{{hid}}'cursor-spacing="15" class='news'  adjust-position></textarea>
               <view class="open_emoji" bindtap="openEmoji">
                   <image src="/images/smile.png"/>
               </view>
