--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -123,7 +123,7 @@
           <view class='adv_left'>
             <text style="font-size:36rpx">决胜千里</text>
             <!-- <text>整合信息资源</text>  -->
-            <text>智能推荐+模拟填报</text>
+            <text>网络招生咨询会</text>
             <text>助力最后一站</text>
             <text>金榜题名  指日可待</text>
           </view>
