--- a/pages/imitate/school/school.wxml
+++ b/pages/imitate/school/school.wxml
@@ -10,37 +10,37 @@
     </view>
     <view class="weui-cells weui-cells_after-title">
         <view class="weui-cell weui-cell_access" hover-class="weui-cell_active" bindtap='major' id='major_1'>
-            <view class="weui-cell__bd" id="{{major_1_id}}">{{major_1_name}}</view>
+            <view class="weui-cell__bd" id="{{major_1_id}}">1、{{major_1_name}}</view>
             <view class="weui-cell__ft weui-cell__ft_in-access"></view>
         </view>
     </view>
     <view class="weui-cells weui-cells_after-title">
         <view class="weui-cell weui-cell_access" hover-class="weui-cell_active" bindtap='major' id='major_2'>
-            <view class="weui-cell__bd" id='{{major_2_id}}'>{{major_2_name}}</view>
+            <view class="weui-cell__bd" id='{{major_2_id}}'>2、{{major_2_name}}</view>
             <view class="weui-cell__ft weui-cell__ft_in-access"></view>
         </view>
     </view>
     <view class="weui-cells weui-cells_after-title">
         <view class="weui-cell weui-cell_access" hover-class="weui-cell_active" bindtap='major' id='major_3'>
-            <view class="weui-cell__bd" id='{{major_3_id}}'>{{major_3_name}}</view>
+            <view class="weui-cell__bd" id='{{major_3_id}}'>3、{{major_3_name}}</view>
             <view class="weui-cell__ft weui-cell__ft_in-access"></view>
         </view>
     </view>
     <view class="weui-cells weui-cells_after-title">
         <view class="weui-cell weui-cell_access" hover-class="weui-cell_active" bindtap='major' id='major_4'>
-            <view class="weui-cell__bd" id='{{major_4_id}}'>{{major_4_name}}</view>
+            <view class="weui-cell__bd" id='{{major_4_id}}'>4、{{major_4_name}}</view>
             <view class="weui-cell__ft weui-cell__ft_in-access"></view>
         </view>
     </view>
     <view class="weui-cells weui-cells_after-title">
         <view class="weui-cell weui-cell_access" hover-class="weui-cell_active" bindtap='major' id='major_5'>
-            <view class="weui-cell__bd" id='{{major_5_id}}'>{{major_5_name}}</view>
+            <view class="weui-cell__bd" id='{{major_5_id}}'>5、{{major_5_name}}</view>
             <view class="weui-cell__ft weui-cell__ft_in-access"></view>
         </view>
     </view>
     <view class="weui-cells weui-cells_after-title">
         <view class="weui-cell weui-cell_access" hover-class="weui-cell_active" bindtap='major' id='major_6'>
-            <view class="weui-cell__bd" id='{{major_6_id}}'>{{major_6_name}}</view>
+            <view class="weui-cell__bd" id='{{major_6_id}}'>6、{{major_6_name}}</view>
             <view class="weui-cell__ft weui-cell__ft_in-access"></view>
         </view>
     </view>
