修改院校库和招办咨询的banner图

--- a/pages/consult/consultlist/consultlist.wxml
+++ b/pages/consult/consultlist/consultlist.wxml
@@ -3,7 +3,7 @@
 <import src="../../../wxParse/wxParse.wxml" />
 <!-- <scroll-view scroll-y style="height: 600px;" bindscrolltoupper="upper" bindscrolltolower="lower" scroll-top="{{scrollTop}}" upper-threshold="75px" bindscroll="scroll"> -->
 <view class="banner">
-  <image src='/images/tb.png'></image>
+  <image src='/images/tb.jpg'></image>
 </view>
 <view class='logo'>
   <view class='logo-left'>
@@ -23,7 +23,10 @@
   <view class="weui-tab">
       <view class="weui-navbar">
         <block wx:for="{{tabs}}" wx:key="*this">
-          <view id="{{index}}" class="weui-navbar__item {{activeIndex == index ? 'weui-bar__item_on' : ''}}" bindtap="tabClick">
+          <view id="{{index}}" class="weui-navbar__items {{activeIndex == index ? 'weui-bar__item_ons' : ''}}" bindtap="tabClick" wx:if="{{index == 3}}">
+              <view class="weui-navbar__title">{{item}}</view>
+          </view>
+          <view id="{{index}}" class="weui-navbar__item {{activeIndex == index ? 'weui-bar__item_on' : ''}}" bindtap="tabClick" wx:else>
               <view class="weui-navbar__title">{{item}}</view>
           </view>
         </block>
