--- a/pages/school/schoolcontent/schoolcontent.wxss
+++ b/pages/school/schoolcontent/schoolcontent.wxss
@@ -27,7 +27,7 @@
   width:90%;
   height:200rpx;
   margin-top:-200rpx;
-  margin-left:10%;
+  margin-left:14%;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
@@ -36,7 +36,6 @@
 .logo-left{
   width:22%;
   height:150rpx;
-  border-radius:75rpx;
   overflow: hidden;
 }
 .logo-left image{
@@ -47,7 +46,6 @@
   width:65%;
   height:120rpx;
   margin-left:5%;
-  color:white;
   font-size:30rpx;
   display: flex;
   flex-direction: column;
@@ -55,6 +53,7 @@
 }
 .logo-text{
   font-size:35rpx;
+  font-weight:bold;
 }
 .line{
   width:100%;
