--- a/pages/analog/result/content/content.wxss
+++ b/pages/analog/result/content/content.wxss
@@ -11,11 +11,11 @@
   height:100%;
 }
 .top{
-  margin:120rpx 3% 30rpx 3%;
+  margin:100rpx 0 30rpx 14%;
   display: flex;
   flex-direction: row;
   align-items: center;
-  color:white;
+  font-weight:bold;
 }
 .top-right{
   display: flex;
@@ -30,7 +30,7 @@
 }
 .top-right-2{
   display: flex;
-  flex-direction: row;
+  flex-wrap: wrap;
   align-items: center;
 }
 .top-right-2 text{
