--- a/pages/intelligence/result/content/content.wxss
+++ b/pages/intelligence/result/content/content.wxss
@@ -12,11 +12,10 @@
   
 }
 .top{
-  margin:100rpx 3% 30rpx 3%;
+  margin:100rpx 0 30rpx 14%;
   display: flex;
   flex-direction: row;
   align-items: center;
-  color:white;
 }
 .top-right{
   display: flex;
@@ -28,11 +27,13 @@
 .top-right-1{
   font-size:35rpx;
   padding-bottom:10rpx;
+  font-weight:bold;
 }
 .top-right-2{
   display: flex;
-  flex-direction: row;
+  flex-wrap: wrap;
   align-items: center;
+  font-weight:bold;
 }
 .top-right-2 text{
   margin-right:15rpx;
