--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -62,10 +62,10 @@
      <text class="more1" bindtap="noticemore">更多></text> 
  </view> 
 <!-- 公告 结束-->
-<!--网络咨询会 开始-->
+<!-- 热门院校 开始 -->
 <view class="notice">
-  <image class='icon' src='../../images/01.png' style='margin-top: 5px;'></image>
-  <view style='font-size:40rpx;color:red;margin: 0 auto;font-family: 华文彩云;'>全国高校招生咨询平台</view>
+  <image class='icon' src='../../images/01.png'></image>
+  <view style='font-size:30rpx;'>网络咨询会的四大优势</view>
   <!-- <span class="more" style="font-size:25rpx;" bindtap="newsmore">更多></span> -->
 </view>
   <view class="page__bd page__bd_spacing" bindtap="advantage">
@@ -73,10 +73,9 @@
       <view class="weui-flex__item">
         <view class="placeholder" style="height:100%">
           <view class='adv_left'>
-            <text style="font-size:36rpx">本科一批</text>
+            <text style="font-size:36rpx">招生政策</text>
             <!-- <text>网络咨询招生办</text> -->
-            <text>院校信息，一览无遗</text>
-            <text>大学详情，尽在这里</text>
+            <text>熟知最新的高考招生政策</text>
           </view>
           <view class='adv_right'>
             <image src="{{index_1}}" style="width:260rpx;height:260rpx"></image>
@@ -90,9 +89,9 @@
       <view class="weui-flex__item">
         <view class="placeholder" style="height:100%;background-color:#0ddce4">
           <view class='adv_left'>
-            <text style="font-size:36rpx">本科二批</text>
+            <text style="font-size:36rpx">实时沟通</text>
             <!-- <text>网络咨询招生办</text> -->
-           <text>与你心仪大学的招办老师零距离沟通</text>
+            <text>与你心仪大学的招办老师零距离沟通</text>
           </view>
           <view class='adv_right'>
             <image src="{{index_2}}" style="width:260rpx;height:260rpx"></image>
@@ -106,7 +105,7 @@
       <view class="weui-flex__item">
         <view class="placeholder" style="height:100%;background-color:#c070f2">
           <view class='adv_left'>
-            <text style="font-size:36rpx">专科批次</text>
+            <text style="font-size:36rpx">深度了解</text>
             <!-- <text>网络咨询招生办</text> -->
             <text>答疑解惑，让你报考志愿有的放矢，不再迷茫</text>
           </view>
@@ -124,9 +123,9 @@
           <view class='adv_left'>
             <text style="font-size:36rpx">决胜千里</text>
             <!-- <text>整合信息资源</text>  -->
-             <text>网络招生咨询会</text>
+            <text>网络招生咨询会</text>
             <text>助力最后一站</text>
-            <text>金榜题名  指日可待</text> 
+            <text>金榜题名  指日可待</text>
           </view>
           <view class='adv_right'>
             <image src="{{index_4}}" style="width:200rpx;height:200rpx"></image>
@@ -135,7 +134,7 @@
       </view>
     </view>
   </view>
-<!-- 网络咨询会 结束 -->
+<!-- 热门院校  结束 -->
 <!-- 高考动态 开始 -->
 <view class="notice">
   <image class='icon' src='../../images/dynamic.png'></image>
@@ -172,7 +171,6 @@
   <view style='font-size:30rpx;;'>线下活动</view>
   <span class="more" style="font-size:25rpx;" bindtap="activitymore">更多></span>
 </view>
-
 <view class='flex-x' style='padding: 15rpx;'>
   <block wx:for="{{activity}}" wx:key="">
   <view class='activity' bindtap='activity' data-id="{{item.NEWS_ID}}">
