--- a/pages/consult/consult.wxss
+++ b/pages/consult/consult.wxss
@@ -14,6 +14,14 @@ page{
   align-items: center;
   justify-content:space-between;
 }
+.remen{
+  margin:20rpx 4% 0 4%;
+  width:92%;
+  height:50rpx;
+  font-size: 18px;
+  color: #E84C33;
+  font-weight: 700;
+}
 .cue{
   margin:20rpx 4% 0 4%;
   width:92%;
@@ -156,6 +164,12 @@ button[type="primary"] {
   display: flex;
   flex-direction: column;
   margin-top:30rpx;
+}
+.flex-wrps1{
+  display: flex;
+  flex-direction: column;
+  margin-top:30rpx;
+  border: 2px dotted #E84C33;
 }
 .weui-media-box__desc{
   margin-top:15rpx;
