--- a/pages/consult/consult.wxml
+++ b/pages/consult/consult.wxml
@@ -34,22 +34,27 @@
 <!--wz：2018-6-1 热门院校 广告位  -->
 <view class="remen"><text>热门院校</text></view>
 <!-- 院校列表 -->
-<block wx:for="{{schools}}" wx:key="SCHOOL_ID" wx:for-item="school"> 
-  <view class="flex-wrps1" bindtap='teacher' data-id="{{school.SCHOOL_ID}}" >
+<!-- <block wx:for="{{schools}}" wx:key="SCHOOL_ID" wx:for-item="school">  -->
+<block wx:for="{{sc}}" wx:key="SCHOOL_ID" wx:for-item="sc"> 
+  <!-- <view class="flex-wrps1" bindtap='teacher' data-id="{{school.SCHOOL_ID}}" > -->
+  <view class="flex-wrps1" bindtap='teacher' data-id="{{sc.SCHOOL_ID}}" >
     <view class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
       <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
-        <image class="weui-media-box__thumb" src="{{school.HEADURL}}" />
+        <!-- <image class="weui-media-box__thumb" src="{{school.HEADURL}}" /> -->
+        <image class="weui-media-box__thumb" src="{{sc.HEADURL}}" />
       </view>
       <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
         <view>
-          <text>{{school.NAME}}</text>
-          <image wx:for="{{school.properties}}" wx:key="" class='icon-property' src="/images/icon/{{item.DIC_ID}}.png"></image>
+          <!-- <text>{{school.NAME}}</text> -->
+          <text>{{sc.NAME}}</text>
+          <!-- <image wx:for="{{school.properties}}" wx:key="" class='icon-property' src="/images/icon/{{item.DIC_ID}}.png"></image> -->
+           <image wx:for="{{sc.properties}}" wx:key="" class='icon-property' src="/images/icon/{{item.DIC_ID}}.png"></image>
         </view>
         <view class="weui-media-box__desc">
-          <text>入驻人数：{{school.TEACOUNT}}人</text><text>地区：{{school.PROVINCE_VALUE}}</text>
+          <text>入驻人数：{{sc.TEACOUNT}}人</text><text>地区：{{sc.PROVINCE_VALUE}}</text>
         </view>
         <view class="weui-media-box__desc">
-          <image wx:for="{{school.subjecttypes}}" wx:key="" class='icon-subjecttype' src="/images/icon/{{item.DIC_ID}}.png"></image>
+          <image wx:for="{{sc.subjecttypes}}" wx:key="" class='icon-subjecttype' src="/images/icon/{{item.DIC_ID}}.png"></image>
         </view>  
       </view>
     </view>
