--- a/pages/person/security/loginpw/loginpw.wxml
+++ b/pages/person/security/loginpw/loginpw.wxml
@@ -30,7 +30,7 @@
         <input class="weui-input" type='password' placeholder="请确认新密码" name='RENEWPASSWORD'/>
     </view>
 </view>
-<view class="weui-cell weui-cell_input weui-cell_vcode">
+<!-- <view class="weui-cell weui-cell_input weui-cell_vcode">
     <view class="weui-cell__hd">
         <view class="weui-label">短信验证码</view>
     </view>
@@ -41,7 +41,7 @@
         <view class="weui-vcode-btn" wx:if='{{codeHidden}}' bindtap='getSMSCode'>获取验证码</view>
         <view class="weui-vcode-btn" wx:if='{{!codeHidden}}'>{{timerNumber}}s后重新获取</view>
     </view>
-</view>
+</view> -->
 </view>
 </view>
 <button class="weui-btn" type="primary" form-type='submit'>保存修改</button>
