--- a/pages/register/register.wxml
+++ b/pages/register/register.wxml
@@ -51,8 +51,8 @@
             <text>考试类型</text>
               <radio-group class="radio-group" bindchange="radioChange">
                   <label class="xuanxiang">
-                      <radio                value="gjv044girc" id='checkbox1'/>文科
-                      <radio checked='true' value="r6j4mh69be" id='checkbox2'/>理科
+                      <radio                value="gjv044girc" id='checkbox1' name='MAJORTYPE'/>文科
+                      <radio checked='true' value="r6j4mh69be" id='checkbox2' name='MAJORTYPE'/>理科
                   </label>
               </radio-group>
             </view>
@@ -66,7 +66,7 @@
                     <view class="weui-label">预估分数</view>
                 </view>
                 <view class="weui-cell__bd">
-                    <input number type='digit' class="weui-input" id='PRESCORE' placeholder="请填写预估分数" maxlength='3' name="fraction" />
+                    <input number type='digit' class="weui-input" id='PRESCORE' placeholder="请填写预估分数" maxlength='3'         name="EXAMSCORE" />
                 </view>
             </view>
           </view>
